--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 authors = ["Dmitry Gritsay <dmitry@vinted.com>"]
 
 [dependencies]
+lazy_static = "0.2.1"
+regex = "0.1"
+ruru = "0.9.3"
